--- a/jenkinsfile
+++ b/jenkinsfile
@@ -12,7 +12,8 @@ pipeline{
             ECS_SVC_NAME='fashionapp-svc' // my ecs service name
             MY_URL='https://${ECR_REPO_URL}/' 
 
-            SONAR_SCANNER= tool 'sonar'
+            SONAR_SCANNER= tool 'sonar-tool'
+            SONAR_SEVER='mySonar_server'
         }
    
     stages{
@@ -21,7 +22,7 @@ pipeline{
         stage("Sonar Scan"){
             steps{
                 script{
-                     withSonarQubeEnv('mySonarQube') {
+                     withSonarQubeEnv(SONAR_SEVER) {
                     // some block
                         echo "  ${SONAR_SCANNER}"
 
